Tag: fix playlistview right-click popover position bug
Issue #214 points out that right-click popover in the playlist view sometimes appears at odd position.
This is because the rectangle the popover points to is too tall.
When the window is small, there isn't enough space at the bottom, so the popover chooses to
appear on the side of the rectangle, which is far away from the user's mouse.

To fix this, change the height of the rectangle to the height of a cell in the TreeView.
The popover will have enough space to appear next to the mouse cursor.

Closes: #214

--- a/data/org.gnome.Music.css
+++ b/data/org.gnome.Music.css
@@ -90,36 +90,6 @@ box#ArtistAlbumsWidget .artist-label {
     font-weight: bold;
 }
 
-/* visual hint for development */
-.devel headerbar {
-    background: transparent -gtk-icontheme("system-run-symbolic") 80% 0/128px 128px no-repeat,
-                linear-gradient(to left,
-                                mix(@theme_fg_color, @theme_bg_color, 0.5) 0%,
-                                @theme_bg_color 25%);
-    color: alpha(@theme_fg_color, 0.2);
-}
-
-.devel headerbar label {
-    color: @theme_fg_color;
-}
-
-.devel headerbar.selection-mode {
-    background: transparent -gtk-icontheme("system-run-symbolic") 80% 0/128px 128px no-repeat,
-                linear-gradient(to left,
-                                @theme_selected_bg_color 0%,
-                                @theme_selected_bg_color 25%);
-    color: alpha(@theme_fg_color, 0.2);
-}
-
-.devel headerbar.selection-mode label {
-    color: @theme_selected_fg_color;
-}
-
-/* headerbar - smooth selection-mode transition */
-headerbar {
-    transition: 250ms ease-in-out;
-}
-
 /* TwoLineTip */
 .tooltip-title {
   font-weight: bold;
